Centralizando sameSite no application.yml e removendo o construtor new URL(String) do HealthCheck.java que foi marcado como @Deprecated